syntax = "proto3";

option csharp_namespace = "MarketBasketAnalysis.Common.Protos";

package marketbasketanalysis.common.protos;

import "google/protobuf/empty.proto";

service AssociationRuleSetStorage {
	rpc Get(google.protobuf.Empty) returns (GetResponse);
	rpc Load(LoadRequest) returns (stream LoadResponse);
	rpc Save(stream SaveRequest) returns (google.protobuf.Empty);
	rpc Remove(RemoveRequest) returns (google.protobuf.Empty);
}

message GetResponse {
	repeated AssociationRuleSetInfoMessage values = 1;
}

message LoadRequest {
	string association_rule_set_name = 1;
}

message LoadResponse {
	AssociationRuleSetPartMessage association_rule_set_part = 1;
}

message SaveRequest {
	AssociationRuleSetPartMessage association_rule_set_part = 1;
}

message RemoveRequest {
	string association_rule_set_name = 1;
}

message AssociationRuleSetPartMessage {
	oneof part_type {
		AssociationRuleSetInfoMessage association_rule_set_info = 1;
		ItemChunkMessage item_chunk = 2;
		AssociationRuleChunkMessage association_rule_chunk = 3;
	}
}

message AssociationRuleSetInfoMessage {
	string name = 1;
	string description = 2;
	int32 transaction_count = 3;
}

message ItemChunkMessage {
	repeated ItemMessage values = 1;
}

message ItemMessage {
	int32 id = 1;
	string name = 2;
	bool is_group = 3;
	int32 count = 4;
}

message AssociationRuleChunkMessage {
	repeated AssociationRuleMessage values = 1;
}

message AssociationRuleMessage {
	int32 left_hand_side_id = 1;
	int32 right_hand_side_id = 2;
	int32 count = 3;
}